--- a/philo/Makefile
+++ b/philo/Makefile
@@ -4,7 +4,7 @@ GREEN = \033[1;32m
 DEFAULT = \033[0m
 NAME		=	philo
 CC			=	cc
-FLAGS		=	-Wall -Wextra -Werror 
+FLAGS		=	-Wall -Wextra -Werror -pthread 
 RM			=	rm -rf
 HEADER		=	philo.h
 SOURCE		=	parcing.c philo.c philotools.c philotools2.c
@@ -13,7 +13,7 @@ OBJS		=	$(SOURCE:.c=.o)
 				@${CC} ${FLAGS} -c $< -o $@
 
 $(NAME):		$(OBJS)
-				@$(CC) $(OBJS) -o $(NAME)
+				@$(CC) $(OBJS) -o $(NAME) 
 				@echo "$(GREEN)$(NAME) Created √$(DEFAULT)"
 
 all:			$(NAME)
